# pikachu-music

./: .gitignore  AGENTS.md  App.tsx  CLAUDE.md  LICENSE  README.md  app.json  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-windows.yml
build-artifacts/: README.md
docs/: GOMUSIC-API-DEPLOY.md  TUNNEL-SETUP.md
docs/superpowers/plans/: 2026-06-22-v1.0.26-no-render-default-cookie-sync.md
docs/superpowers/specs/: 2026-06-22-v1.0.26-no-render-default-cookie-sync-design.md
scripts/: setup-backend.sh  setup-tunnel.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: backend.ts  backendHealth.ts  cookieSync.ts  downloader.tauri.ts  downloader.ts  downloader.web.ts  gomusic.ts  legacySources.ts  types.ts
src/components/: PlatformMultiSelect.tsx
src/components/accounts/: AccountsTab.tsx  CookiesTab.tsx
src/components/header/: Header.tsx
src/components/lyrics/: LyricLine.tsx  LyricsParticleFx.tsx  index.ts
src/components/ui/: BackgroundParticles.tsx
src/hooks/: useAnimatedPress.ts  useTrackPlayer.ts
src/i18n/: I18nProvider.tsx  translations.ts
src/navigation/: RootNavigator.tsx  navRef.ts  types.ts
src/screens/: AddToPlaylistSheet.tsx  PlayerScreen.tsx  PlaylistScreen.tsx  SearchScreen.tsx  SettingsPanel.tsx
src/state/: playerStore.ts  searchStore.ts  settingsStore.ts  uiStore.ts
src/theme/: colors.ts  index.ts  spacing.ts  styles.ts
src/utils/: format.ts  interleaved.ts  lrc.ts  platforms.ts  quality.ts
